@@ -1,2 +1,3 @@
 ggplot2 0.9 (2009-XX-XX) ----------------------------------------
 
+* stat_quantile: correctly group results
